Update to latest goa
